--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
-  "name": "upcounsel",
+  "name": "react-webpack-rails-tutorial",
+  "version": "0.0.1",
   "private": true,
-  "dependencies": {}
+  "engines": {
+    "node": "6.9.0",
+    "npm": "4.1.1"
+  },
+  "scripts": {
+    "postinstall": "cd client && yarn install",
+    "rails-server": "echo 'visit http://localhost:3000/hello_world' && foreman start -f Procfile.dev",
+    "test": "rspec"
+  },
+  "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.2.1",
+    "redux-thunk": "^2.2.0",
+    "superagent": "^3.5.2"
+  }
 }
