--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "rspec"
   },
   "dependencies": {
+    "babel-preset-react": "^6.24.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
     "redux-thunk": "^2.2.0",
