--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "babel-preset-react": "^6.24.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
+    "react": "0.14.0",
+    "react-dom": "0.14.0",
+    "react-tweet": "^1.0.22",
     "redux-thunk": "^2.2.0",
     "superagent": "^3.5.2"
   }
