--- a/config/database.yml
+++ b/config/database.yml
@@ -5,15 +5,15 @@ default: &default
 
 development:
   <<: *default
-  database: ror_development
+  database: sheltered-mountain-87978_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: ror_test
+  database: sheltered-mountain-87978r_test
 
 production:
   <<: *default
-  database: ror_production
+  database: sheltered-mountain-87978_production
